# UnScenes3D

./: .gitignore  README.md
docs/: PIPLINE.md
pipline/: PIPLINE.md  readme.md
pipline/uns_2kitti/: depth_pred.py  occ_pred.py
pipline/uns_is/: app.py
pipline/uns_is/glee/data/: __init__.py  omnilabel_eval.py
pipline/uns_is/glee/data/datasets/: omnilabel.py
pipline/uns_label4d/: gen_label_2d.py  gen_label_depth.py  gen_label_height.py  gen_label_vehinfo.py  gen_odom_fine.py  gen_pc_semantic.py  get_label_caption.py  get_label_depth.py  get_pclabel_occ.py  get_pclabel_rock.py
pipline/uns_label4d/base/: calib.py  config.yaml  database.py
pipline/uns_label4d/label_4d/: gen_label_caption.py  gen_label_depth.py  gen_label_height.py  gen_label_vehinfo.py  gen_pclabel_occ.py  gen_pclabel_semantic.py
pipline/uns_label4d/src/: CMakeLists.txt  obs_2d_builder.py  obs_4d_builder.cpp  obs_4d_builder.py  odom_fintuner.py  package.xml  static_obs_builder.cpp  static_obs_builder.py  static_obs_invis.py
pipline/uns_label4d/src/common/: cluster_polygon.cpp  cluster_polygon.h  concaveman.hpp  octree_connection.hpp  polyiou.hpp  rtree.hpp
pipline/uns_label4d/utils/: view_depth_elevation.py  view_occ.py
pipline/unsis/: app.py
pipline/unsis/glee/models/: glee_model.py
weights/unscene_2d/: config.yaml
