<?xml version="1.0"?>
<package format="2">
  <name>uns_label4d</name>
  <version>1.0.0</version>
  <description>The uns_label4d package</description>
  <maintainer email="knightdby@163.com">Knight</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_config_msgs</depend>
  <depend>autoware_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
